Made lecture table scrollable to prevent the page spill over

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -81,18 +81,31 @@ th {
 }
 
 
-#lec_table th {
+#lec_table #lec_table_header {
 	font-size: 1.5em;
 	color: white;
 	background-color: #18BC9C;
+	font-weight: bold;
+	margin-left: 0px;
+	margin-right: 0px;
 }
 
-#lec_table tr.lec-row:nth-of-type(odd) {
+#lec_table #lecture-list {
+	overflow-y: auto;
+	height: 60vh;
+	width: 100%;
+}
+
+#lec_table #lecture-list .lec-row.gray-row {
 	background-color: #eee;
 }
 
-#lec_table tr.lec-row:hover {
+#lec_table #lecture-list .lec-row:hover {
 	background: #fefbd8;
+}
+
+#lec_table #lecture-list .extra-content {
+	background: rgb(24, 188, 156, 0.1);
 }
 
 #transcript {
